[gd_scene load_steps=14 format=3 uid="uid://d0l2t2hnk6fsu"]

[ext_resource type="Script" path="res://scripts/scene_main.gd" id="1_5v8cf"]
[ext_resource type="Texture2D" uid="uid://bq1fb8i7vtves" path="res://assets/resu_menu.png" id="2_eyujq"]
[ext_resource type="Shader" path="res://shaders/blur.gdshader" id="2_nim08"]
[ext_resource type="Texture2D" uid="uid://bnf2dw0qvtswe" path="res://scenes/ui_scene/scene_main/assets/window_bg.png" id="3_j0ou4"]
[ext_resource type="PackedScene" uid="uid://b1hk4o04kvkqq" path="res://scenes/l_button.tscn" id="4_5s5ro"]
[ext_resource type="Script" path="res://auto_load/game_time/game_time_window.gd" id="5_3x6yt"]
[ext_resource type="Script" path="res://scenes/scene_name_label.gd" id="6_w87f3"]
[ext_resource type="PackedScene" uid="uid://1nvvaoxy1h3g" path="res://component/window_menu_v2/menu_v2.tscn" id="6_yaxyn"]
[ext_resource type="Texture2D" uid="uid://c7v2mmqkwqc7d" path="res://assets/system/keyboard.png" id="7_kiemt"]
[ext_resource type="PackedScene" uid="uid://1wdhlbrkec7r" path="res://scenes/ui_scene/scene_main/window/window_item.tscn" id="9_qsxwp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_11qkm"]
shader = ExtResource("2_nim08")
shader_parameter/blur_radius = 3.321

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1mf4a"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w01cw"]
texture = ExtResource("3_j0ou4")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5v8cf")
metadata/_edit_use_anchors_ = true

[node name="PanelBg" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_11qkm")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_1mf4a")

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -323.0
offset_top = -8.0
offset_right = -168.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "蔷薇之子PauseMenu"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 468.0
offset_top = 32.0
offset_right = 776.0
offset_bottom = 599.0
texture = ExtResource("2_eyujq")

[node name="ItemList" type="ItemList" parent="."]
visible = false
layout_mode = 0
offset_left = 22.0
offset_top = 473.0
offset_right = 165.0
offset_bottom = 566.0
allow_search = false
auto_height = true
item_count = 3
fixed_column_width = 4
item_0/text = "道具"
item_1/text = "资料"
item_2/text = "载入"

[node name="MenuPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 24.0
offset_top = 40.0
offset_right = 185.0
offset_bottom = 120.0
theme_override_styles/panel = SubResource("StyleBoxTexture_w01cw")

[node name="Button" parent="MenuPanel" instance=ExtResource("4_5s5ro")]
layout_mode = 1
text = "道具"
symbol = "item"

[node name="Button3" parent="MenuPanel" instance=ExtResource("4_5s5ro")]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.454545
anchor_right = 0.993789
anchor_bottom = 0.909091
offset_top = -0.363598
offset_right = 0.999969
offset_bottom = 3.27272
text = "载入"
symbol = "load"

[node name="MenuV2" parent="." instance=ExtResource("6_yaxyn")]
layout_mode = 0
offset_left = 27.0
offset_top = 44.0
offset_right = 190.0
offset_bottom = 268.0

[node name="Panel3" type="Panel" parent="." node_paths=PackedStringArray("label")]
layout_mode = 0
offset_left = 27.0
offset_top = 502.0
offset_right = 202.0
offset_bottom = 542.0
script = ExtResource("5_3x6yt")
label = NodePath("Label")

[node name="Label" type="Label" parent="Panel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0时0分0秒"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SceneNameLabel" type="Panel" parent="."]
layout_mode = 0
offset_left = 219.0
offset_top = 502.0
offset_right = 442.0
offset_bottom = 542.0
script = ExtResource("6_w87f3")

[node name="Label" type="Label" parent="SceneNameLabel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "当前位置：蔷薇馆"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -40.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel2"]
custom_minimum_size = Vector2(60, 20)
layout_mode = 0
offset_left = 129.0
offset_top = -2.0
offset_right = 217.0
offset_bottom = 38.0
theme_override_constants/margin_left = 30

[node name="Sprite2D" type="Sprite2D" parent="Panel2/MarginContainer"]
position = Vector2(13, 20)
scale = Vector2(1.5, 1.5)
texture = ExtResource("7_kiemt")
region_enabled = true
region_rect = Rect2(16, 16, 16, 16)

[node name="Label" type="Label" parent="Panel2/MarginContainer"]
layout_mode = 2
text = "确认"

[node name="MarginContainer2" type="MarginContainer" parent="Panel2"]
custom_minimum_size = Vector2(60, 20)
layout_mode = 0
offset_left = 20.0
offset_top = -2.0
offset_right = 114.0
offset_bottom = 38.0
theme_override_constants/margin_left = 30

[node name="Sprite2D2" type="Sprite2D" parent="Panel2/MarginContainer2"]
position = Vector2(13, 20)
scale = Vector2(1.5, 1.5)
texture = ExtResource("7_kiemt")
region_enabled = true
region_rect = Rect2(16, 32, 16, 16)

[node name="Label" type="Label" parent="Panel2/MarginContainer2"]
layout_mode = 2
text = "回到游戏"

[node name="WindowItem" parent="." instance=ExtResource("9_qsxwp")]
visible = false
layout_mode = 1
offset_left = 24.0
offset_top = 144.0
offset_right = -34.0
offset_bottom = -178.0
